fix mobile overflow on projects page

--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -126,6 +126,7 @@ pre {
   // min-height: 80vh;
   margin: 0px 0 0 0;
   // background-color: $white;
+  overflow-x: hidden;
 }
 
 .container--no-padding {
